--- a/index.html
+++ b/index.html
@@ -178,6 +178,13 @@
             </svg>
             <span class="upload-text">写真を撮る / 選ぶ</span>
           </div>
+          <!-- Progress Bar -->
+          <div id="breakfast-progress" class="progress-container hidden">
+            <div class="progress-bar">
+              <div class="progress-fill"></div>
+            </div>
+            <div class="progress-text">0%</div>
+          </div>
           <div id="breakfast-preview" class="image-preview-container hidden">
             <img id="breakfast-img" class="preview-image" alt="Meal">
             <div class="image-actions">
@@ -273,6 +280,13 @@
             </svg>
             <span class="upload-text">写真を撮る / 選ぶ</span>
           </div>
+          <!-- Progress Bar -->
+          <div id="lunch-progress" class="progress-container hidden">
+            <div class="progress-bar">
+              <div class="progress-fill"></div>
+            </div>
+            <div class="progress-text">0%</div>
+          </div>
           <div id="lunch-preview" class="image-preview-container hidden">
             <img id="lunch-img" class="preview-image" alt="Meal">
             <div class="image-actions">
@@ -359,6 +373,13 @@
               <circle cx="12" cy="13" r="4"></circle>
             </svg>
             <span class="upload-text">写真を撮る / 選ぶ</span>
+          </div>
+          <!-- Progress Bar -->
+          <div id="dinner-progress" class="progress-container hidden">
+            <div class="progress-bar">
+              <div class="progress-fill"></div>
+            </div>
+            <div class="progress-text">0%</div>
           </div>
           <div id="dinner-preview" class="image-preview-container hidden">
             <img id="dinner-img" class="preview-image" alt="Meal">
