--- a/index.html
+++ b/index.html
@@ -495,6 +495,9 @@
     </div>
   </div>
 
+  <!-- Toast Container -->
+  <div id="toast-container" class="toast-container"></div>
+
   <script src="src/script.js"></script>
 </body>
 
