--- a/index.html
+++ b/index.html
@@ -498,7 +498,8 @@
   <!-- Toast Container -->
   <div id="toast-container" class="toast-container"></div>
 
-  <script src="src/script.js"></script>
+  <!-- Obfuscated Script -->
+  <script src="dist/script.js"></script>
 </body>
 
 </html>
