--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
 <body>
   <!-- Loading Screen -->
   <div id="loading-screen" class="loading-screen">
-    <div class="loader"></div>
+    <div class="loading-container">
+      <div class="loading-brand">
+        <svg class="loading-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round">
+          <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+          <line x1="16" y1="2" x2="16" y2="6"></line>
+          <line x1="8" y1="2" x2="8" y2="6"></line>
+          <line x1="3" y1="10" x2="21" y2="10"></line>
+        </svg>
+      </div>
+      <div class="loading-bar-container">
+        <div class="loading-bar"></div>
+      </div>
+    </div>
   </div>
 
   <!-- Login Screen -->
@@ -90,7 +103,15 @@
           </svg>
         </span>
         <div class="user-menu">
-          <img id="user-avatar" class="user-avatar" src="" alt="User">
+          <div class="header-avatar-wrapper">
+            <img id="user-avatar" class="user-avatar" src="" alt="User">
+            <div id="header-avatar-placeholder" class="header-avatar-placeholder">
+              <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                <circle cx="12" cy="7" r="4"></circle>
+              </svg>
+            </div>
+          </div>
           <span id="user-email" class="user-email"></span>
           <button id="settings-btn" class="settings-btn" title="設定">
             <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -536,6 +557,49 @@
         </button>
       </div>
       <div class="settings-body">
+        <div class="settings-section">
+          <h3>プロフィール</h3>
+          <div class="profile-avatar-setting">
+            <div class="avatar-preview-wrapper">
+              <img id="settings-avatar-preview" class="avatar-preview" src="" alt="プロフィール画像">
+              <div class="avatar-placeholder" id="avatar-placeholder">
+                <svg class="icon-lg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                  <circle cx="12" cy="7" r="4"></circle>
+                </svg>
+              </div>
+            </div>
+            <div class="avatar-actions">
+              <input type="file" id="avatar-file-input" class="file-input" accept="image/*">
+              <button id="change-avatar-btn" class="change-avatar-btn">
+                <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
+                  <circle cx="12" cy="13" r="4"></circle>
+                </svg>
+                画像を変更
+              </button>
+              <button id="remove-avatar-btn" class="remove-avatar-btn hidden">
+                <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <polyline points="3 6 5 6 21 6"></polyline>
+                  <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                </svg>
+                削除
+              </button>
+            </div>
+          </div>
+          <div class="settings-input-group">
+            <label for="username-input">ユーザー名</label>
+            <input type="text" id="username-input" class="settings-input" placeholder="ユーザー名を入力">
+          </div>
+          <button id="save-username-btn" class="save-username-btn">
+            <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
+              <polyline points="17 21 17 13 7 13 7 21"></polyline>
+              <polyline points="7 3 7 8 15 8"></polyline>
+            </svg>
+            保存
+          </button>
+        </div>
         <div class="settings-section danger-zone">
           <h3>危険な操作</h3>
           <p class="settings-warning">アカウントを削除すると、すべてのデータが完全に削除され、元に戻すことはできません。</p>
